# Quad

./: .gitignore  CMakeLists.txt
contrib/glad/glad/: glad.h
src/: bspfile.h  chase.c  chase.h  cl_demo.c  cl_demo.h  cl_input.c  cl_input.h  cl_main.c  cl_main.h  cl_parse.c  cl_parse.h  cl_tent.c  cl_tent.h  client.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  crc.c  crc.h  cvar.c  cvar.h  host.c  host.h  host_cmd.c  host_cmd.h  input.h  keys.c  keys.h  mathlib.c  mathlib.h  menu.c  menu.h  modelgen.h  net.h  net_loop.c  net_loop.h  net_main.c  (+39 more)
src/render_common/: common_anorms.h  common_d_iface.h  common_draw.h  common_r_efrag.h  common_r_misc.h  common_r_part.c  common_r_part.h  common_render.h  common_screen.h  d_iface.h  d_local.h  draw.h  r_part.c  render.h  screen.h
src/render_gl/: gl_draw.c  gl_draw.h  gl_mesh.c  gl_mesh.h  gl_model.c  gl_model.h  gl_r_efrag.c  gl_r_light.c  gl_r_light.h  gl_r_main.c  gl_r_main.h  gl_r_misc.c  gl_r_misc.h  gl_r_surf.c  gl_r_surf.h  gl_refrag.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_test.c  gl_warp.c  gl_warp.h  glad.c  glquake.h
src/render_soft/: soft_d_edge.c  soft_d_edge.h  soft_d_fill.c  soft_d_init.c  soft_d_local.h  soft_d_modech.c  soft_d_part.c  soft_d_polyse.c  soft_d_scan.c  soft_d_scan.h  soft_d_sky.c  soft_d_sky.h  soft_d_sprite.c  soft_d_sprite.h  soft_d_surf.c  soft_d_surf.h  soft_d_vars.c  soft_d_zpoint.c  soft_draw.c  soft_model.c  soft_model.h  soft_r_aclip.c  soft_r_aclip.h  soft_r_alias.c  soft_r_alias.h  soft_r_bsp.c  soft_r_bsp.h  soft_r_draw.c  soft_r_draw.h  soft_r_edge.c  soft_r_edge.h  soft_r_efrag.c  soft_r_efrag.h  soft_r_light.c  soft_r_light.h  soft_r_local.h  soft_r_main.c  soft_r_main.h  soft_r_misc.c  soft_r_misc.h  (+9 more)
src/sound/: cd_null.c  snd_dma.c  snd_mem.c  snd_mix.c  snd_sdl2.c  sound.h
